-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: hotspot
-
b19
After JDK-8329651, libgraal still crashes.
The fix applied in Thread::print_on_error also needs to be applied to JavaThread::print_on_error:
10 00000058`7cefc510 00007ffb`f4af37c9 jvm!report_vm_error(
char * file = 0x00007ffb`f5356430 "c:\sb\prod\1712573323\workspace\open\src\hotspot\share\runtime/thread.hpp",
int line = 0n546,
char * error_msg = 0x00007ffb`f5356400 "assert(_stack_base != nullptr) failed",
char * detail_fmt = 0x00007ffb`f53563f0 "Sanity check")+0x5b
11 (Inline Function) --------`-------- jvm!Thread::stack_base(void)+0x6b
12 (Inline Function) --------`-------- jvm!Thread::stack_end(void)+0x6b
13 00000058`7cefc570 00007ffb`f51b1621 jvm!JavaThread::print_on_error(
class outputStream * st = 0x00000058`7cefe1a0,
char * buf = 0x00007ffb`f5950b30 "",
int buflen = 0n2000)+0x269
14 (Inline Function) --------`-------- jvm!Threads::print_on_error(void)+0x75
15 00000058`7cefc5d0 00007ffb`f523cdcc jvm!Threads::print_on_error(
class outputStream * st = 0x00000058`7cefe1a0,
class Thread * current = 0x000001a5`ea0e1f20,
char * buf = 0x00007ffb`f5950b30 "",
int buflen = 0n2000)+0x171
The fix applied in Thread::print_on_error also needs to be applied to JavaThread::print_on_error:
10 00000058`7cefc510 00007ffb`f4af37c9 jvm!report_vm_error(
char * file = 0x00007ffb`f5356430 "c:\sb\prod\1712573323\workspace\open\src\hotspot\share\runtime/thread.hpp",
int line = 0n546,
char * error_msg = 0x00007ffb`f5356400 "assert(_stack_base != nullptr) failed",
char * detail_fmt = 0x00007ffb`f53563f0 "Sanity check")+0x5b
11 (Inline Function) --------`-------- jvm!Thread::stack_base(void)+0x6b
12 (Inline Function) --------`-------- jvm!Thread::stack_end(void)+0x6b
13 00000058`7cefc570 00007ffb`f51b1621 jvm!JavaThread::print_on_error(
class outputStream * st = 0x00000058`7cefe1a0,
char * buf = 0x00007ffb`f5950b30 "",
int buflen = 0n2000)+0x269
14 (Inline Function) --------`-------- jvm!Threads::print_on_error(void)+0x75
15 00000058`7cefc5d0 00007ffb`f523cdcc jvm!Threads::print_on_error(
class outputStream * st = 0x00000058`7cefe1a0,
class Thread * current = 0x000001a5`ea0e1f20,
char * buf = 0x00007ffb`f5950b30 "",
int buflen = 0n2000)+0x171
- duplicates
-
JDK-8329885 JavaThread::print_on_error should access the _stack_base and _stack_size fields directly
-
- Closed
-
- relates to
-
JDK-8329651 TestLibGraal.java crashes with assert(_stack_base != nullptr)
-
- Resolved
-