8329864: TestLibGraal.java still crashes with assert(_stack_base != nullptr)

Reviewed-by: dnsimon, jsjolen, dcubed